# TCE

./: .gitignore  CMakeLists.txt  README.md  bench.cpp  bench.hpp  bitboard.cpp  bitboard.hpp  build.ps1  definition.cpp  definition.hpp  evaluate.cpp  evaluate.hpp  makefile  move.cpp  move.hpp  movegen.cpp  movegen.hpp  orderer.cpp  orderer.hpp  perft.cpp  perft.hpp  position.cpp  position.hpp  rng.hpp  search.cpp  search.hpp  tce.c  tce.cpp  timeman.cpp  timeman.hpp  ttable.cpp  uci.cpp  uci.hpp  utils.cpp  utils.hpp
src/: CMakeLists.txt  Makefile  bench.cpp  bench.hpp  bitboard.cpp  bitboard.hpp  definition.cpp  definition.hpp  evaluate.cpp  evaluate.hpp  main.cpp  move.cpp  move.hpp  movegen.cpp  movegen.hpp  orderer.cpp  orderer.hpp  perft.cpp  perft.hpp  position.cpp  position.hpp  rng.cpp  rng.hpp  search.cpp  search.hpp  timeman.cpp  timeman.hpp  ttable.cpp  ttable.hpp  uci.cpp  uci.hpp
